Modified the build file to work on Linux